# typer-cli-template

./: AGENTS.md  LICENSE  README.md  make_repo.sh  pyproject.toml
cli-app-name/: __main__.py  app.py  cli.py
cli_app_name/: __init__.py  __main__.py  cli.py
tests/: test_cli.py
