[build-system]
requires = ["setuptools==75.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "{cli-app-name}"
version = "0.1"
description = "cli tool for [To be filled in.]"
readme = "README.md"
authors = [
    {name = "Deryck Hodge"}
]
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "typer==0.15.1"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
{cli-app-name}  = "{cli-app-name}.cli:command"
