[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[project]
name = "cli-app-name"
version = "0.1"
description = "cli tool for [To be filled in.]"
readme = "README.md"
authors = [
    {name = "Deryck Hodge"}
]
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "typer==0.15.1"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
cli-app-name = "cli_app_name.cli:command"

[dependency-groups]
dev = [
    "black==24.10.0",
]

[tool.black]
line-length = 78

[tool.uv.build-backend]
module-root = ""
